2011-09-30  Peter Breitenlohner  <peb@mp.mpg.de>

	* tex.ch (print_file_line): Bug fix: avoid uninitialized lineno.
	Patch and discussion from Karl, 21 Sep 2011 16:05:09 GMT.

2011-09-11  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp-help.h: The option -kanji-internal=STRING is effective
	also for pTeX and epTeX.

2011-08-29  Peter Breitenlohner  <peb@mp.mpg.de>

	* texmfmp.h [WIN32]: Allow to build TeX & Co as DLL.

2011-08-23  Peter Breitenlohner  <peb@mp.mpg.de>

	* triptrap-sh: Add uptrip and euptrip tests.

2011-08-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmem.h: upTeX uses Aleph-type memory words.

2011-08-19  Peter Breitenlohner  <peb@mp.mpg.de>

	* help.h (UPBIBTEXHELP): Add "-kanji-internal".

2011-08-17  Peter Breitenlohner  <peb@mp.mpg.de>

	* help.h (PBIBTEXHELP, PDVITYPEHELP, PPLTOTFHELP, PTFTOPLHELP):
	Add "-sjis-terminal" for WIN32 versions.  Uniform appearance.
	Add UPBIBTEXHELP, UPDVITYPEHELP, UPPLTOTFHELP, and UPTFTOPLHELP.
	* texmfmp-help.h: WIN32 options also for MINGW32.

	* configure.ac: New conditional UPWEB for upBibTeX and Co.

2011-08-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp-help.h: Recover help messages for w32tex.

2011-08-15  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* texmfmp-help.h: Remove w32tex garbage.

2011-08-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* Makefile.am, texmfmem.h, texmfmp.h, texmfmp-help.h,
	ac/web2c.ac: Add support for upTeX and e-upTeX.

2011-07-30  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* mft.ch (parsearguments): Allow find_suffix() to return a
	const string.

2011-07-11  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* configure.ac: No need to test for PDFDoc::getPDFMajorVersion
	for poppler >= 0.12.

2011-07-08  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* enctex.ch: Fix an off-by-one bug initializing mubyte_cswrite.
	From Roderich Schupp <roderich.schupp@googlemail.com>,
	Debian Bug#633011, tex-k mail Fri, 8 Jul 2011 15:56:23.

2011-07-06  Peter Breitenlohner  <peb@mppmu.mpg.de>