@@ -1,3 +1,7 @@
+2011-10-04  Peter Breitenlohner  <peb@mppmu.mpg.de>
+
+	* am/ptex.am (DISTCLEANFILES): Preserve distributed files.
+
 2011-08-29  Peter Breitenlohner  <peb@mppmu.mpg.de>
 
 	* pbibtex.ch: Use nil, not 0 as arg of set_enc_string().
